# lwa-conduit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD.md  PUBLISHING.md  ROADMAP-LWA.md  ROADMAP.md  SYSTEM_OVERVIEW.md  USAGE.md  runtime-routing.md
examples/: 01_hello.py
examples/dags/: m1-hello.yaml
kiro_conduit/: cli.py  dag.py  dashboard.py  git_utils.py  merge.py  metrics.py  orchestrator.py  planner.py  proc_util.py  semantic.py  worktree.py
kiro_conduit/acp/: client.py  messages.py
kiro_conduit/roles/: implementor.py  verifier.py
kiro_conduit/runtime/: __init__.py  cursor_cli.py  model_router.py  quota.py  registry.py  session_id.py  types.py
lwa_conduit/: cli.py  planner.py  run_state.py
tests/: conftest.py
tests/fakes/: __init__.py  mock_acp_server.py
tests/integration/: __init__.py  test_acp_client.py  test_cross_repo_pipeline.py
tests/unit/: test_cli.py  test_client_parsing.py  test_coordinator.py  test_dag.py  test_dashboard.py  test_git_utils.py  test_implementor.py  test_merge.py  test_messages.py  test_orchestrator.py  test_planner.py  test_quota.py  test_runtime_model_router.py  test_semantic.py  test_verifier.py  test_worktree.py
tools/: stability_run.py
